fixed layout issues

--- a/application/static/css/main.css
+++ b/application/static/css/main.css
@@ -2,6 +2,9 @@
 
 	width: 100%;
 }
+.row {
+	margin-bottom: 20px;
+}
 
 [type="date"] {
 	background:#fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)  97% 50% no-repeat ;
@@ -27,5 +30,5 @@
 	background-color: #fff;
 	padding: 3px 5px;
 	box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
-	width: 190px;
+	
   }
